--- a/SumiFoc02-no_duration.Rmd
+++ b/SumiFoc02-no_duration.Rmd
@@ -64,9 +64,10 @@ SumiFoc.no.dur.plot2 <- ggplot(data = SumiFoc.no.wide, aes(x = Focus, fill = Pre
   #labs(title = (expression(paste("Duration of ", italic("=no"), ", by focus condition and predicate")))) +
   theme(axis.title = element_text(size = 16)) +
   theme(axis.text = element_text(size = 14)) +
-  scale_fill_brewer(name="Predicate",
+  scale_fill_brewer(name="Sentence type",
           breaks=c("chase", "sleep", "big"),
-          labels=c("transitive 'chase'", "intransitive 'sleep'", "verbless 'bigger (one)'"), palette="YlGnBu") +
+          labels=c("transitive 'chase'", "intransitive 'sleep'", "verbless 'bigger'"),
+          palette="YlGnBu") +
   theme(legend.justification = c(1,0.99), legend.position = c(1,0.99)) +
   theme(legend.title = element_text(size = 16)) +
   theme(legend.text = element_text(size = 14)) +
