--- a/SumiFoc05-lastsyll50_f0.Rmd
+++ b/SumiFoc05-lastsyll50_f0.Rmd
@@ -67,7 +67,10 @@ SumiFoc.tone50.f0.plot2 <- ggplot(data = SumiFoc.tone50.wide, aes(x = Focus, fil
                          labels=c("chase", "sleep", "(be) the big one")) +
   theme(plot.title = element_text(hjust = 0.5))
 SumiFoc.tone50.f0.plot2
-dev.copy(png, "figures/SumiFoc_tone50_focuspred_f0.png")
+
+#Save as PNG file
+png(file = "figures/SumiFoc_tone50_focuspred_f0.png", width = 500, height = 450, res = 72)
+SumiFoc.tone50.f0.plot2
 dev.off()
 ```
 
@@ -91,6 +94,7 @@ SumiFoc.tone50.f0.plot3 <- ggplot(data = SumiFoc.tone50.wide, aes(x = Focus, fil
                          labels=c("High", "Mid", "Low")) +
   theme(plot.title = element_text(hjust = 0.5))
 SumiFoc.tone50.f0.plot3
+
 dev.copy(png, "figures/SumiFoc_tone50_focustone_f0.png")
 dev.off()
 ```
@@ -131,11 +135,43 @@ SumiFoc.tone.f0.summ$Time0 <-
 
 # Plot each combination of focus and tone condition across time (using mean duration of each combination)
 pd <- position_dodge(0.1)
+SumiFoc.tone.f0.traj1 <- ggplot(SumiFoc.tone.f0.summ, aes(x = Time0, y = F0, shape = Focus, group = interaction(ToneCondition, Focus))) + #Use x=Time for equal time
+  geom_line(aes(linetype = ToneCondition), size = 1.25, position = pd) + #Line type depends on Tone.
+  geom_point(data=subset(SumiFoc.tone.f0.summ, (Time==0.01|Time==0.2|Time==0.4|Time==0.6|Time==0.8|Time==1)), aes(shape = Focus), size = 5, position = pd) + #Only show the points for a subset of the data
+  geom_errorbar(data = subset(SumiFoc.tone.f0.summ, (Time==0.01|Time==0.2|Time==0.4|Time==0.6|Time==0.8|Time==1)), aes(ymin = F0-sd/2, ymax = F0+sd/2), width = 1.0, position = pd) + #Only show half the SD for a subset of the data
+  scale_x_continuous(limits = c(-0.01,0.10),
+                     breaks = c(0.00,0.05,0.10)) + # Set x range + ticks
+  scale_y_continuous(limits = c(140, 240), 
+                    breaks = c(150,175,200, 225)) + #Set y range + ticks
+  labs(x = "Time (s)", y = "F0 (Hz)") +
+  theme_bw() +
+  scale_linetype_discrete(name = "Tone of syllable",
+                        breaks = c("H", "M", "L"),
+                        labels = c("High", "Mid", "Low")) +  
+   scale_shape_discrete(name = "Focus condition",
+                        breaks = c("broad", "narrow"),
+                        labels = c("broad", "narrow")) +
+  theme(axis.title = element_text(size = 18),
+        axis.text = element_text(size = 17)) + #Adjust font size of axes
+  theme(legend.title = element_text(size = 16),
+        legend.text = element_text(size = 14)) + #Adjust size of legend
+  #theme(legend.justification = c(1,0),
+   #     legend.position = c(.99,0)) + # Set the "anchoring point" of the legend (bottom-left is 0,0; top-right is 1,1); Put top-right corner of legend box in top-right corner of graph
+  theme(plot.title = element_text(hjust = 0.5))
+SumiFoc.tone.f0.traj1
+
+#Save as PNG file
+png(file = "figures/SumiFoc_focustone_f0traj-bw2.png", width = 600, height = 450, res = 72)
+SumiFoc.tone.f0.traj1
+dev.off()
+
+
+pd <- position_dodge(0.1)
 SumiFoc.tone.f0.traj2 <- ggplot(SumiFoc.tone.f0.summ, aes(x = Time0, y = F0, colour = ToneCondition, shape = Focus, group = interaction(ToneCondition, Focus))) + #Use x=Time for equal time
   geom_line(aes(linetype = Focus), size = 1.25, position = pd) + #Line type depends on Tone.
   geom_point(data=subset(SumiFoc.tone.f0.summ, (Time==0.01|Time==0.2|Time==0.4|Time==0.6|Time==0.8|Time==1)), aes(shape = Focus), size = 5, position = pd) + #Only show the points for a subset of the data
   geom_errorbar(data = subset(SumiFoc.tone.f0.summ, (Time==0.01|Time==0.2|Time==0.4|Time==0.6|Time==0.8|Time==1)), aes(ymin = F0-sd/2, ymax = F0+sd/2), width = 1.0, position = pd) + #Only show half the SD for a subset of the data
-  scale_x_continuous(limits = c(-0.01,0.11),
+  scale_x_continuous(limits = c(-0.01,0.10),
                      breaks = c(0.00,0.05,0.10)) + # Set x range + ticks
   scale_y_continuous(limits = c(140, 240), 
                     breaks = c(150,175,200, 225)) + #Set y range + ticks
@@ -154,13 +190,13 @@ SumiFoc.tone.f0.traj2 <- ggplot(SumiFoc.tone.f0.summ, aes(x = Time0, y = F0, col
         axis.text = element_text(size = 17)) + #Adjust font size of axes
   theme(legend.title = element_text(size = 16),
         legend.text = element_text(size = 14)) + #Adjust size of legend
-  theme(legend.justification = c(1,1),
-        legend.position = c(1,.99)) + # Set the "anchoring point" of the legend (bottom-left is 0,0; top-right is 1,1); Put top-right corner of legend box in top-right corner of graph
+  #theme(legend.justification = c(1,0),
+   #     legend.position = c(.99,0)) + # Set the "anchoring point" of the legend (bottom-left is 0,0; top-right is 1,1); Put top-right corner of legend box in top-right corner of graph
   theme(plot.title = element_text(hjust = 0.5))
 SumiFoc.tone.f0.traj2
 
 #Save as PNG file
-png(file = "figures/SumiFoc_focustone_f0traj.png", width = 500, height = 450, res = 72)
+png(file = "figures/SumiFoc_focustone_f0traj.png", width = 600, height = 450, res = 72)
 SumiFoc.tone.f0.traj2
 dev.off()
 ```
