--- a/SumiFoc08-finalsyll_f0.Rmd
+++ b/SumiFoc08-finalsyll_f0.Rmd
@@ -60,6 +60,8 @@ SumiFoc.finalsyll50.f0.summ2
 
 SumiFoc.finalsyll50.f02 <- lm(T50 ~ Focus * Predicate, data = SumiFoc.finalsyll50.wide)
 summary(SumiFoc.finalsyll50.f02)
+SumiFoc.finalsyll50.f02.aov <- aov(T50 ~ Focus * Predicate, data = SumiFoc.finalsyll50.wide)
+summary(SumiFoc.finalsyll50.f02.aov)
 
 # Plot differences in F0 across focus condition and predicate
 SumiFoc.finalsyll50.f0.plot2 <- ggplot(data = SumiFoc.finalsyll50.wide, aes(x = Focus, fill = Predicate,  y = T50)) +
@@ -113,6 +115,40 @@ SumiFoc.finalsyll.f0.summ$Time0 <-
 
 # Plot each combination of focus and tone condition across time (using mean duration of each combination)
 pd <- position_dodge(0.1)
+
+SumiFoc.finalsyll.f0.traj1 <- ggplot(SumiFoc.finalsyll.f0.summ, aes(x = Time0, y = F0, group = interaction(Focus,Predicate))) + #Use x=Time for equal time
+  geom_line(aes(linetype = Focus), size = 1.25, position = pd) + #Line type depends on focus condition
+  geom_point(data=subset(SumiFoc.finalsyll.f0.summ, (Time==0.01|Time==0.2|Time==0.4|Time==0.6|Time==0.8|Time==1)), aes(shape = Predicate), size = 5, position = pd) + #Only show the points for a subset of the data
+  geom_errorbar(data = subset(SumiFoc.finalsyll.f0.summ, (Time==0.01|Time==0.2|Time==0.4|Time==0.6|Time==0.8|Time==1)), aes(ymin = F0-sd/2, ymax = F0+sd/2), width = 1.0, position = pd) + #Only show half the SD for a subset of the data
+  scale_x_continuous(limits = c(-0.01,0.21),
+                     breaks = c(0.00,0.05,0.10,0.15,0.20)) + # Set x range + ticks
+  scale_y_continuous(limits = c(145, 175), 
+                    breaks = c(150,160,170)) + #Set y range + ticks
+  labs(x = "Time (s)", y = "F0 (Hz)") +
+  #labs(title = (expression(paste("F0 trace across final syllable of sentence"))) +
+  theme_bw() +
+      scale_shape_discrete(name = "Predicate",
+                        breaks = c("chase", "sleep"),
+                        labels=c("transitive 'chase'", "intransitive 'sleep'")) +
+    scale_linetype_discrete(name = "Focus condition",
+                        breaks = c("broad", "narrow"),
+                        labels = c("broad", "narrow")) + 
+  theme(axis.title = element_text(size = 18),
+        axis.text = element_text(size = 17)) + #Adjust font size of axes
+  theme(legend.title = element_text(size = 16),
+        legend.text = element_text(size = 14)) + #Adjust size of legend
+  theme(legend.justification = c(1,1),
+        legend.position = c(1,.99),
+        legend.box = "horizontal") + # Set the "anchoring point" of the legend (bottom-left is 0,0; top-right is 1,1); Put top-right corner of legend box in top-right corner of graph
+  theme(plot.title = element_text(hjust = 0.5))
+SumiFoc.finalsyll.f0.traj1
+
+#Save as PNG file
+png(file = "figures/SumiFoc_focustone_f0traj-bw.png", width = 500, height = 450, res = 72)
+SumiFoc.finalsyll.f0.traj1
+dev.off()
+
+
 SumiFoc.finalsyll.f0.traj2 <- ggplot(SumiFoc.finalsyll.f0.summ, aes(x = Time0, y = F0, colour = Focus, linetype = Focus, shape = Predicate, group = interaction(Focus,Predicate))) + #Use x=Time for equal time
   geom_line(aes(linetype = Focus), size = 1.25, position = pd) + #Line type depends on focus condition
   geom_point(data=subset(SumiFoc.finalsyll.f0.summ, (Time==0.01|Time==0.2|Time==0.4|Time==0.6|Time==0.8|Time==1)), aes(shape = Predicate), size = 5, position = pd) + #Only show the points for a subset of the data
