--- a/SumiFoc05-lastsyll50_f0.Rmd
+++ b/SumiFoc05-lastsyll50_f0.Rmd
@@ -88,14 +88,22 @@ summary(SumiFoc.tone50.f03)
 SumiFoc.tone50.f0.plot3 <- ggplot(data = SumiFoc.tone50.wide, aes(x = Focus, fill = ToneCondition,  y = T50)) +
   geom_boxplot() +
   theme_bw() +
-  labs(x = "Focus condition", y = "F0 (Hz)", title = (expression(paste("F0 at midpoint of syllable before ", italic("=no"), ", by focus condition and tone category")))) +
-  scale_fill_discrete(name="Tone",
+  labs(x = "Focus condition", y = "F0 (Hz)") + #title = (expression(paste("F0 at midpoint of syllable before ", italic("=no"), ", by focus condition and tone category")))) +
+  scale_fill_brewer(name="Tone",
                          breaks=c("H", "M", "L"),
-                         labels=c("High", "Mid", "Low")) +
+                         labels=c("High", "Mid", "Low"),
+                          palette = "Set1") +
+  theme(axis.title = element_text(size = 16)) +
+  theme(axis.text = element_text(size = 14)) +
+  theme(legend.justification = c(1,0.99), legend.position = c(1,0.99)) +
+  theme(legend.title = element_text(size = 16)) +
+  theme(legend.text = element_text(size = 14)) +
   theme(plot.title = element_text(hjust = 0.5))
 SumiFoc.tone50.f0.plot3
 
-dev.copy(png, "figures/SumiFoc_tone50_focustone_f0.png")
+#Save as PNG file
+png(file = "figures/SumiFoc_tone50_focustone_f0-color.png", width = 500, height = 450, res = 72)
+SumiFoc.tone50.f0.plot3
 dev.off()
 ```
 
@@ -135,9 +143,9 @@ SumiFoc.tone.f0.summ$Time0 <-
 
 # Plot each combination of focus and tone condition across time (using mean duration of each combination)
 pd <- position_dodge(0.1)
-SumiFoc.tone.f0.traj1 <- ggplot(SumiFoc.tone.f0.summ, aes(x = Time0, y = F0, shape = ToneCondition, group = interaction(ToneCondition, Focus))) + #Use x=Time for equal time
+SumiFoc.tone.f0.traj1 <- ggplot(SumiFoc.tone.f0.summ, aes(x = Time0, y = F0, colour = ToneCondition, shape = Focus, group = interaction(ToneCondition, Focus))) + #Use x=Time for equal time
   geom_line(aes(linetype = Focus), size = 1.25, position = pd) + #Line type depends on Tone.
-  geom_point(data=subset(SumiFoc.tone.f0.summ, (Time==0.01|Time==0.2|Time==0.4|Time==0.6|Time==0.8|Time==1)), aes(shape = ToneCondition), size = 5, position = pd) + #Only show the points for a subset of the data
+  geom_point(data=subset(SumiFoc.tone.f0.summ, (Time==0.01|Time==0.2|Time==0.4|Time==0.6|Time==0.8|Time==1)), aes(shape = Focus), size = 5, position = pd) + #Only show the points for a subset of the data
   geom_errorbar(data = subset(SumiFoc.tone.f0.summ, (Time==0.01|Time==0.2|Time==0.4|Time==0.6|Time==0.8|Time==1)), aes(ymin = F0-sd/2, ymax = F0+sd/2), width = 1.0, position = pd) + #Only show half the SD for a subset of the data
   scale_x_continuous(limits = c(-0.01,0.09),
                      breaks = c(0.00,0.02,0.04,0.06,0.08)) + # Set x range + ticks
@@ -145,10 +153,14 @@ SumiFoc.tone.f0.traj1 <- ggplot(SumiFoc.tone.f0.summ, aes(x = Time0, y = F0, sha
                     breaks = c(150,175,200,225)) + #Set y range + ticks
   labs(x = "Time (s)", y = "F0 (Hz)") +
   theme_bw() +
-  scale_shape_discrete(name = "Tone of syllable",
+  scale_colour_brewer(name = "Tone of syllable",
                         breaks = c("H", "M", "L"),
-                        labels = c("High", "Mid", "Low")) +  
-   scale_linetype_discrete(name = "Focus condition",
+                        labels = c("High", "Mid", "Low"),
+                        palette = "Set1") +
+  scale_linetype_discrete(name = "Focus condition",
+                        breaks = c("broad", "narrow"),
+                        labels = c("broad", "narrow")) +  
+   scale_shape_discrete(name = "Focus condition",
                         breaks = c("broad", "narrow"),
                         labels = c("broad", "narrow")) +
   theme(axis.title = element_text(size = 18),
@@ -162,7 +174,7 @@ SumiFoc.tone.f0.traj1 <- ggplot(SumiFoc.tone.f0.summ, aes(x = Time0, y = F0, sha
 SumiFoc.tone.f0.traj1
 
 #Save as PNG file
-png(file = "figures/SumiFoc_focustone_f0traj-bw1.png", width = 500, height = 450, res = 72)
+png(file = "figures/SumiFoc_focustone_f0traj-color.png", width = 500, height = 450, res = 72)
 SumiFoc.tone.f0.traj1
 dev.off()
 
