--- a/SumiFoc08-finalsyll_f0.Rmd
+++ b/SumiFoc08-finalsyll_f0.Rmd
@@ -73,7 +73,7 @@ SumiFoc.finalsyll50.f0.plot2 <- ggplot(data = SumiFoc.finalsyll50.wide, aes(x = 
   theme(axis.text = element_text(size = 14)) +
   scale_fill_brewer(name="Sentence type",
           breaks=c("chase", "sleep"),
-          labels=c("transitive 'chase'", "intransitive 'sleep'"), palette="Greys") +
+          labels=c("transitive 'chase'", "intransitive 'sleep'"), palette="Set2") +
   theme(legend.justification = c(1,0.99), legend.position = c(1,0.99)) +
   theme(legend.title = element_text(size = 16)) +
   theme(legend.text = element_text(size = 14)) +
@@ -81,7 +81,7 @@ SumiFoc.finalsyll50.f0.plot2 <- ggplot(data = SumiFoc.finalsyll50.wide, aes(x = 
 SumiFoc.finalsyll50.f0.plot2
 
 #Save as PNG file
-png(file = "figures/SumiFoc_finalsyll50_focuspred_f0-bw.png", width = 500, height = 450, res = 72)
+png(file = "figures/SumiFoc_finalsyll50_focuspred_f0-color.png", width = 500, height = 450, res = 72)
 SumiFoc.finalsyll50.f0.plot2
 dev.off()
 ```
@@ -116,7 +116,7 @@ SumiFoc.finalsyll.f0.summ$Time0 <-
 # Plot each combination of focus and tone condition across time (using mean duration of each combination)
 pd <- position_dodge(0.1)
 
-SumiFoc.finalsyll.f0.traj1 <- ggplot(SumiFoc.finalsyll.f0.summ, aes(x = Time0, y = F0, group = interaction(Focus,Predicate))) + #Use x=Time for equal time
+SumiFoc.finalsyll.f0.traj1 <- ggplot(SumiFoc.finalsyll.f0.summ, aes(x = Time0, y = F0, color = Predicate, group = interaction(Focus,Predicate))) + #Use x=Time for equal time
   geom_line(aes(linetype = Focus), size = 1.25, position = pd) + #Line type depends on focus condition
   geom_point(data=subset(SumiFoc.finalsyll.f0.summ, (Time==0.01|Time==0.2|Time==0.4|Time==0.6|Time==0.8|Time==1)), aes(shape = Predicate), size = 5, position = pd) + #Only show the points for a subset of the data
   geom_errorbar(data = subset(SumiFoc.finalsyll.f0.summ, (Time==0.01|Time==0.2|Time==0.4|Time==0.6|Time==0.8|Time==1)), aes(ymin = F0-sd/2, ymax = F0+sd/2), width = 1.0, position = pd) + #Only show half the SD for a subset of the data
@@ -127,7 +127,10 @@ SumiFoc.finalsyll.f0.traj1 <- ggplot(SumiFoc.finalsyll.f0.summ, aes(x = Time0, y
   labs(x = "Time (s)", y = "F0 (Hz)") +
   #labs(title = (expression(paste("F0 trace across final syllable of sentence"))) +
   theme_bw() +
-      scale_shape_discrete(name = "Predicate",
+    scale_colour_brewer(name = "Sentence type",
+                        breaks = c("chase", "sleep"),
+                        labels=c("transitive 'chase'", "intransitive 'sleep'"), palette = "Set2") +
+    scale_shape_discrete(name = "Sentence type",
                         breaks = c("chase", "sleep"),
                         labels=c("transitive 'chase'", "intransitive 'sleep'")) +
     scale_linetype_discrete(name = "Focus condition",
@@ -144,7 +147,7 @@ SumiFoc.finalsyll.f0.traj1 <- ggplot(SumiFoc.finalsyll.f0.summ, aes(x = Time0, y
 SumiFoc.finalsyll.f0.traj1
 
 #Save as PNG file
-png(file = "figures/SumiFoc_focustone_f0traj-bw.png", width = 500, height = 450, res = 72)
+png(file = "figures/SumiFoc_focustone_f0traj-color.png", width = 500, height = 450, res = 72)
 SumiFoc.finalsyll.f0.traj1
 dev.off()
 
